--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/three": "^0.182.0",
     "framer-motion": "^12.34.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
+    "ogl": "^1.0.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "swiper": "^12.1.1"
+    "sass": "^1.97.3",
+    "split-type": "^0.3.4",
+    "swiper": "^12.1.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -23,6 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "opentype.js": "^1.3.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
